[project]
name = "meow-meow-hood"
version = "0.1.0"
description = "A robinhood api wrapper for option data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "python-dotenv>=1.2.2",
  "python-snappy>=0.7.3",
  "requests>=2.33.1",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Trent Lee" }]

[project.urls]
Homepage = "https://github.com/DaBestXD/meow-meow-hood"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["robinhood*"]
namespaces = false

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
ignore = ["**/__init__.py"]
