[project]
name = "meow-meow-hood"
version = "0.2.1"
description = "A robinhood api wrapper for option data"
readme = "README.pypi.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.2.2",
  "python-snappy>=0.7.3",
  "requests>=2.33.1",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Trent Lee" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/DaBestXD/meow-meow-hood"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["robinhood*"]
namespaces = false

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
ignore = ["**/__init__.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
